--- a/units/kubelet-master.service
+++ b/units/kubelet-master.service
@@ -4,13 +4,19 @@ Documentation=https://github.com/kubernetes/kubernetes
 Requires=docker.service
 After=docker.service
 
+
 [Service]
 # set env vars properly
 EnvironmentFile=/etc/kubernetes.env
 EnvironmentFile=/etc/instance.env
 
+#  systemd supports a simple notification protocol that allows daemons to make
+#  systemd aware that they are done initializing
+# Type=notify
+
 ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
 ExecStart=/usr/bin/kubelet $KUBE_KUBELET_MASTER_OPTS
+
 
 # These settings set both soft and hard limits of various resources for executed
 # processes.
@@ -21,6 +27,12 @@ ExecStart=/usr/bin/kubelet $KUBE_KUBELET_MASTER_OPTS
 LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
+
+
+# Specify the maximum number of tasks that may be created in the unit. This
+# ensures that the number of tasks accounted for the unit stays below a specific
+# limit. If assigned the special value "infinity", no tasks limit is applied.
+TasksMax=infinity
 
 
 # Takes one of no, on-success, on-failure, on-abnormal, on-watchdog, on-abort,
@@ -50,6 +62,6 @@ Restart=always
 RestartSec=10
 
 
-# allows this unit to be enabled via systemctl enable
 [Install]
+# allows this unit to be enabled via systemctl enable
 WantedBy=multi-user.target
