--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "source_ami": "ami-74dcfc17",
   "region": "ap-southeast-2",
   "instance_type": "t2.micro",
-  "ami_name": "coreos-stable-hvm-kubernetes-{{timestamp}}",
+  "ami_name": "coreos-stable-hvm-kubernetes",
   "ami_description": "CoreOS Kubernetes Base Image",
   "kube_version": "1.2.1",
   "etcd_version": "2.3.1",
