--- a/units/kubelet-node.service
+++ b/units/kubelet-node.service
@@ -4,13 +4,18 @@ Documentation=https://github.com/kubernetes/kubernetes
 Requires=docker.service
 After=docker.service
 
+
 [Service]
 # set env vars properly
 EnvironmentFile=/etc/kubernetes.env
 EnvironmentFile=/etc/instance.env
 
+#  systemd supports a simple notification protocol that allows daemons to make
+#  systemd aware that they are done initializing
+# Type=notify
+
 ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
-ExecStart=/usr/bin/kubelet $KUBE_KUBELET_NODE_OPTS
+ExecStart=/opt/bin/kubelet $KUBE_KUBELET_NODE_OPTS
 
 # These settings set both soft and hard limits of various resources for executed
 # processes.
@@ -22,6 +27,10 @@ LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
 
+# Specify the maximum number of tasks that may be created in the unit. This
+# ensures that the number of tasks accounted for the unit stays below a specific
+# limit. If assigned the special value "infinity", no tasks limit is applied.
+TasksMax=infinity
 
 # Takes one of no, on-success, on-failure, on-abnormal, on-watchdog, on-abort,
 # or always. If set to no (the default), the service will not be restarted. If
@@ -50,6 +59,6 @@ Restart=always
 RestartSec=10
 
 
-# allows this unit to be enabled via systemctl enable
 [Install]
+# allows this unit to be enabled via systemctl enable
 WantedBy=multi-user.target
