units: add kubelet master service

--- a/units/kube-kubelet-master.service
+++ b/units/kube-kubelet-master.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Kubernetes Kubelet
+Description=Kubernetes Kubelet Master
 Documentation=https://github.com/kubernetes/kubernetes
 Requires=docker.service
 After=docker.service
