--- a/units/kube-kubelet-master.service
+++ b/units/kube-kubelet-master.service
@@ -7,14 +7,15 @@ After=docker.service
 
 [Service]
 # set env vars properly
-EnvironmentFile=/etc/kubernetes.env
 EnvironmentFile=/etc/instance.env
+EnvironmentFile=/etc/kubernetes.env
 
 #  systemd supports a simple notification protocol that allows daemons to make
 #  systemd aware that they are done initializing
 # Type=notify
 
 ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
+ExecStartPre=/usr/bin/mkdir -p /srv/kubernetes/manifests
 ExecStart=/opt/bin/kubelet $KUBE_KUBELET_MASTER_OPTS
 
 # These settings set both soft and hard limits of various resources for executed
@@ -26,11 +27,6 @@ ExecStart=/opt/bin/kubelet $KUBE_KUBELET_MASTER_OPTS
 LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
-
-# Specify the maximum number of tasks that may be created in the unit. This
-# ensures that the number of tasks accounted for the unit stays below a specific
-# limit. If assigned the special value "infinity", no tasks limit is applied.
-TasksMax=infinity
 
 # Takes one of no, on-success, on-failure, on-abnormal, on-watchdog, on-abort,
 # or always. If set to no (the default), the service will not be restarted. If
