--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-  "source_ami": "ami-74dcfc17",
-  "region": "ap-southeast-2",
-  "instance_type": "t2.micro",
+  "source_ami": "ami-d75bd4bb",
+  "region": "sa-east-1",
+  "instance_type": "m3.xlarge",
   "ami_name": "coreos-stable-hvm-kubernetes",
   "ami_description": "CoreOS Kubernetes Base Image",
   "kube_version": "1.2.1",
